# hw06-Stephenouu

./: .buildinfo  Makefile  README.html  README.md  _config.yml  _toc.yml  conf.py  genindex.html  hw06-description.html  index.html  index.ipynb  search.html  searchindex.js  setup.cfg
.pytest_cache/: README.html
_build/.doctrees/: environment.pickle  hw06-description.doctree
_build/html/: .buildinfo  README.html  genindex.html  hw06-description.html  index.html  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  environment.pickle  index.doctree
_build/jupyter_execute/: index.ipynb  index.py
_sources/: README.md  index.ipynb
data/: GW150914_data.csv
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO
ligotools/tests/: test_readligo.py  test_utils.py
