# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = ligotools
version          = "0.0.2"
author           = Ligo Scientific Collaboration (LSC) and Stephen Ou
author_email     = stephenouu@berkeley.edu
description      = A Python library to readligo
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, ligo
classifiers      =
	Programming Language :: Python :: 2.7
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 2.7,
install_requires =
	tqdm
